--- a/Day_4.ipynb
+++ b/Day_4.ipynb
@@ -9,8 +9,8 @@
     }
    },
    "source": [
-    "# 3. 훈련 데이터 생성\n",
-    "## 3.1 데이터 로드와 전처리"
+    "# 5. RNN 계열의 네트워크를 사용한 시계열 데이터 처리\n",
+    "## 5.1 데이터 로드와 전처리"
    ]
   },
   {
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read (52, 120700, 75).csv \t train_x shape : (121, 2) train_y shape : (121,)\n",
-      "Read (12, 100010, 50).csv \t train_x shape : (242, 2) train_y shape : (242,)\n"
+      "Read (52, 120700, 75).csv \t train_x shape : (117, 3, 2) train_y shape : (117,)\n",
+      "Read (12, 100010, 50).csv \t train_x shape : (234, 3, 2) train_y shape : (234,)\n"
      ]
     }
    ],
@@ -31,13 +31,17 @@
     "import numpy as np\n",
     "import pickle\n",
     "import os\n",
+    "from collections import deque\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "train_x, train_y = np.array([]), np.array([])\n",
+    "train_x_seq, train_y_seq = np.array([[]]), np.array([])\n",
+    "\n",
     "want_para = ['WAFWTK', 'FCWP']\n",
     "scaler = MinMaxScaler()\n",
     "\n",
     "for file in os.listdir('./DB')[0:2]:\n",
+    "    time_seq = 3\n",
     "    if '.csv' in file:\n",
     "        csv_db = pd.read_csv(f'./DB/{file}', index_col=0)\n",
     "        #1. CSV 파일을 Numpy 배열로 전환\n",
@@ -60,20 +64,33 @@
     "        train_x = get_xdb if train_x.shape[0] == 0 else np.concatenate((train_x, get_xdb), axis=0)\n",
     "        train_y = np.append(train_y, get_y, axis=0)\n",
     "\n",
+    "        if time_seq != 1:\n",
+    "            for i in range(len(get_xdb) - time_seq - 1):\n",
+    "                # print(get_xdb[i:i + time_seq], get_y[i + time_seq + 1])\n",
+    "                x__ = np.array([get_xdb[i:i + time_seq]])\n",
+    "                train_x_seq = x__ if train_x_seq.shape[1] == 0 else np.concatenate((train_x_seq, np.array([get_xdb[i:i + time_seq]])), axis=0)\n",
+    "\n",
+    "                y__ = np.array([get_y[i + time_seq + 1]])\n",
+    "                train_y_seq = y__ if train_y_seq.shape[0] == 0 else np.concatenate((train_y_seq, y__), axis=0)\n",
+    "\n",
     "        #4. min_max scaler update\n",
     "        scaler.partial_fit(train_x)\n",
     "\n",
-    "        print(f'Read {file} \\t train_x shape : {np.shape(train_x)} train_y shape : {np.shape(train_y)}')\n",
+    "        if time_seq != 1:\n",
+    "            print(f'Read {file} \\t train_x shape : {np.shape(train_x_seq)} train_y shape : {np.shape(train_y_seq)}')\n",
+    "        else:\n",
+    "            print(f'Read {file} \\t train_x shape : {np.shape(train_x)} train_y shape : {np.shape(train_y)}')\n",
     "\n",
     "# 5. 전체 db min-max scaling\n",
-    "train_x = scaler.transform(train_x)\n",
+    "train_x_seq = np.array([scaler.transform(_) for _ in train_x_seq])\n",
     "\n",
     "# 6. 저장\n",
     "save_data_info = {\n",
     "    'scaler': scaler,\n",
     "    'want_para': want_para,\n",
-    "    'train_x': train_x,\n",
-    "    'train_y': train_y,\n",
+    "    'time_seq': time_seq,\n",
+    "    'train_x': train_x_seq,\n",
+    "    'train_y': train_y_seq,\n",
     "}\n",
     "\n",
     "with open('db_info.pkl', 'wb') as f:\n",
@@ -128,44 +145,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_6 (Dense)              (None, 128)               384       \n",
+      "rnn (RNN)                    (None, 32)                1120      \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 128)               16512     \n",
+      "flatten (Flatten)            (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 4)                 516       \n",
+      "dense (Dense)                (None, 128)               4224      \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 4)                 516       \n",
       "=================================================================\n",
-      "Total params: 17,412\n",
-      "Trainable params: 17,412\n",
+      "Total params: 5,860\n",
+      "Trainable params: 5,860\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/5\n",
-      "8/8 [==============================] - 1s 5ms/step - loss: 1.2910 - accuracy: 0.4898\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "8/8 [==============================] - 2s 12ms/step - loss: 1.3497 - accuracy: 0.3401\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
       "Epoch 2/5\n",
-      "8/8 [==============================] - 0s 5ms/step - loss: 1.0169 - accuracy: 0.6125\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 1.0744 - accuracy: 0.5202\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
       "Epoch 3/5\n",
-      "8/8 [==============================] - 0s 6ms/step - loss: 0.8622 - accuracy: 0.6315\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "8/8 [==============================] - 0s 13ms/step - loss: 0.9327 - accuracy: 0.5894\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
       "Epoch 4/5\n",
-      "8/8 [==============================] - 0s 5ms/step - loss: 0.8028 - accuracy: 0.6342\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "8/8 [==============================] - 0s 14ms/step - loss: 0.8087 - accuracy: 0.6179\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
       "Epoch 5/5\n",
-      "8/8 [==============================] - 0s 5ms/step - loss: 0.7813 - accuracy: 0.5769\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+      "8/8 [==============================] - 0s 13ms/step - loss: 0.8085 - accuracy: 0.6211\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<tensorflow.python.keras.callbacks.History at 0x150727b2ee0>"
+      "text/plain": "<tensorflow.python.keras.callbacks.History at 0x21f85604eb0>"
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +193,9 @@
     "import tensorflow.keras as k\n",
     "\n",
     "model = k.Sequential([\n",
-    "    k.layers.InputLayer(input_shape=(len(save_data_info['want_para']))),\n",
-    "    k.layers.Dense(128),\n",
+    "    # k.layers.RNN(k.layers.SimpleRNNCell(32), input_shape=(save_data_info['time_seq'], len(save_data_info['want_para']))),\n",
+    "    k.layers.RNN(k.layers.SimpleRNNCell(32), input_shape=(save_data_info['time_seq'], len(save_data_info['want_para']))),\n",
+    "    k.layers.Flatten(),\n",
     "    k.layers.Dense(128, activation='relu'),\n",
     "    k.layers.Dense(4, activation='softmax')\n",
     "])\n",
@@ -184,7 +204,7 @@
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "print(model.summary())\n",
-    "model.fit(save_data_info['train_x'], save_data_info['train_y'], epochs=5)"
+    "model.fit(save_data_info['train_x'], save_data_info['train_y'], epochs=5)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -216,7 +236,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -233,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "model.load_weights('model.h5')"
